question small fix

--- a/public/style/faq.css
+++ b/public/style/faq.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;700&display=swap");
+
 h3,
 h4 {
   font-family: "Plus Jakarta Sans";
@@ -17,30 +18,119 @@ button {
   background-color: rgba(0, 0, 128, 0);
 }
 
+.status-loading {
+  font-size: 20px;
+  color: black;
+  height: 100%;
+  width: max-content;
+  text-align: center;
+}
+
+.status-loading .loading-icon {
+  height: 180px;
+}
+
+.status-loading .success-icon {
+  width: 70px;
+}
+
+.status-loading h5 {
+  font-family: "Plus Jakarta Sans";
+  font-style: normal;
+  font-weight: 700;
+  color: black;
+  font-size: 22px;
+}
+
+.status-loading p {
+  color: #8F8585;
+}
+
+.status-success {
+  padding-top: 50px;
+  height: 100%;
+  width: max-content;
+  text-align: center;
+}
+
+.status-success .loading-icon {
+  height: 180px;
+}
+
+.status-success .success-icon {
+  width: 70px;
+}
+
+.status-success h5 {
+  font-family: "Plus Jakarta Sans";
+  font-style: normal;
+  font-weight: 700;
+  color: black;
+  font-size: 22px;
+}
+
+.status-success p {
+  color: #8F8585;
+}
+
+.status-warning {
+  padding-top: 50px;
+  height: 100%;
+  width: max-content;
+  text-align: center;
+  width: auto;
+}
+
+.status-warning .loading-icon {
+  height: 180px;
+}
+
+.status-warning .success-icon {
+  width: 70px;
+}
+
+.status-warning h5 {
+  font-family: "Plus Jakarta Sans";
+  font-style: normal;
+  font-weight: 700;
+  color: black;
+  font-size: 22px;
+}
+
+.status-warning p {
+  color: #8F8585;
+}
+
 .contact-popup {
   width: auto;
   gap: 15px;
 }
+
 .contact-popup .contact-info {
   text-align: start !important;
   width: 550px;
 }
+
 .contact-popup .contact-info div {
   gap: 30px;
 }
+
 .contact-popup form {
   text-align: start !important;
   gap: 12px;
   display: block;
 }
+
 .contact-popup form input,
 .contact-popup form textarea {
   border-radius: 7px;
 }
-.contact-popup form input[name=useremail] {
+
+.contact-popup form input[name=email] {
   border: 1px solid #9B9B9B;
   height: 50px;
 }
+
 .contact-popup form label {
   white-space: nowrap;
   background-color: #E5EAF0;
@@ -49,6 +139,7 @@ button {
   color: #164520;
   border-radius: 8px;
 }
+
 .contact-popup form input[type=submit] {
   background-color: #164520;
   border: none;
@@ -58,6 +149,17 @@ button {
   font-family: "Plus Jakarta Sans";
   font-style: normal;
   font-weight: 500;
+}
+
+.contact-popup form .file-group {
+  gap: 12px;
+}
+
+.contact-popup form .file-group .filename {
+  width: 234px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .swal2-close:focus {
@@ -71,11 +173,13 @@ button {
 .main-section {
   gap: 40px;
 }
+
 .main-section .navigation p {
   font-family: "Plus Jakarta Sans";
   font-style: normal;
   font-weight: 400;
 }
+
 .main-section .navigation p a {
   color: #002B5B;
   text-decoration: none;
@@ -83,11 +187,13 @@ button {
   font-style: normal;
   font-weight: 600;
 }
+
 .main-section .faq .faq-list .faq-title p {
   font-family: "Plus Jakarta Sans";
   font-style: normal;
   font-weight: 400;
 }
+
 .main-section .faq .faq-list .faq-item .faq-title .expand {
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
@@ -100,15 +206,19 @@ button {
   background-repeat: no-repeat;
   transform: scale(0.8);
 }
-.main-section .faq .faq-list .faq-item .collapse > div {
+
+.main-section .faq .faq-list .faq-item .collapse>div {
   padding-left: 0 !important;
 }
-.main-section .faq .faq-list .faq-item .collapse.show > div {
+
+.main-section .faq .faq-list .faq-item .collapse.show>div {
   padding-left: 0 !important;
 }
-.main-section .faq .faq-list .faq-item .collapsing > div {
+
+.main-section .faq .faq-list .faq-item .collapsing>div {
   padding-left: 0 !important;
 }
+
 .main-section .right-side button {
   padding: 7px 8px;
   font-size: 15px;
